--- a/api/.eslintrc.yaml
+++ b/api/.eslintrc.yaml
@@ -3,6 +3,9 @@ extends: '../.eslintrc.yaml'
 globals:
   include: true
 
+plugins:
+  - knex
+
 rules:
   no-sync: error
   no-restricted-syntax:
@@ -15,3 +18,4 @@ rules:
         message: "Use only ISO8601 UTC syntax ('2019-03-12T01:02:03Z') in Date constructor"
      -  selector: "CallExpression[callee.object.object.name='faker'][callee.object.property.name='internet'][callee.property.name='email']"
         message: "Use only faker.internet.exampleEmail()"
+  knex/avoid-injections: error
