--- a/mon-pix/package.json
+++ b/mon-pix/package.json
@@ -115,7 +115,8 @@
     "sass": "^1.30.0",
     "showdown": "^1.9.1",
     "stylelint": "^13.8.0",
-    "stylelint-config-standard": "^20.0.0"
+    "stylelint-config-standard": "^20.0.0",
+    "xss": "^1.0.8"
   },
   "dependencies": {}
 }
